syntax = "proto3";

package P4TLB.MasterServer;

service Authentication
{
    rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
    rpc UserSignUp (UserSignUpRequest) returns (UserSignUpResponse) {} //< will not be enabled for now
}

message UserLoginRequest
{
    string login = 1;
    string password = 2; //< need to be hashed before being sent...
}

message UserLoginResponse
{
    enum ErrorCode
    {
        Success = 0;
        Invalid = 1;
    }
    
    /* Error codes:
     * 0 -> success
     * 1 -> invalid (we can't say if the password was incorrect or username was incorrect: security reason)
     */
    ErrorCode error = 1;
}

/* For the password part, we will use generated token from a homemade discord bot */
message UserSignUpRequest
{
    string login = 1;
    string password = 2; //< need to be hashed before being sent...
}

message UserSignUpResponse
{
    enum ErrorCode
    {
        Success = 0;
        Invalid = 1;
    }

    ErrorCode error = 1;
}