syntax = "proto3";

message DataUserAccount
{
    uint64 id = 1; // key
    string login = 2;
    string hashed_password = 3;
}